# rust-try

./: README.md
datum_parser/: Cargo.toml  README.md
datum_parser/src/: main.rs
dining-philosophers/: Cargo.toml
dining-philosophers/src/: main.rs
filemoniter/: Cargo.toml
filemoniter/src/: main.rs
guessing_game/: Cargo.toml  README.md
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml  README.md
hello_world/: README.md
