[package]
name = "datum_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
tidb_query_datatype = { git = "https://github.com/tikv/tikv", tag = "v8.5.0", package = "tidb_query_datatype" }
tikv_alloc = { git = "https://github.com/tikv/tikv", tag = "v8.5.0", package = "tikv_alloc" }
"chrono" = "0.4.22"
"tokio" = { version = "1.38.2", features = ["full"] }
tipb = { git = "https://github.com/pingcap/tipb.git" }

# Copy of tikv's to fix the compile error
[patch.crates-io]
raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }

[features]
default = ["jemalloc", ]
jemalloc = ["tikv_alloc/jemalloc"]
